# q-agent

./: AUTHORS  BUGS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  THANKS  TODO  acinclude.m4  aclocal.m4  agent.c  agent.h  agentlib.c  agentlib.h  agpg.c  apgp.c  autogen.sh  client.c  config.h.in  configure  configure.ac  i18n.h  quintuple-agent.malloc.patch  quintuple-agent_1.0.4-6.diff  secmem.c  secret-ask.c  secret-query.c  util.c
doc/: ChangeLog  Makefile.am  Makefile.in  agpg.1  agpg.sgml  apgp.1  apgp.sgml  manual.info  manual.sgml  manual.texi  q-agent.1  q-agent.sgml  q-client.1  q-client.sgml  query-options.sgml  secret-ask.1  secret-ask.sgml  secret-query.1  secret-query.sgml  trailer.sgml
lib/: ChangeLog  Makefile.am  Makefile.in  asprintf.c  asprintf.h  getline.c  getline.h  setenv.c  setenv.h  strdup.h
m4/: ChangeLog
po/: ChangeLog  Makevars  POTFILES.in  de.gmo  de.po  es_ES.gmo  es_ES.po  fr.gmo  fr.po  it.gmo  it.po  pl.gmo  pl.po  pt_BR.gmo  pt_BR.po  quintuple-agent.pot  ru.gmo  ru.po
test/: ChangeLog  Makefile.am  Makefile.in  client.c
